force-app/main/default/objects/Metric_Definition__mdt/Metric_Definition__mdt.object-meta.xml
<CustomObject>
    <label>Metric Definition</label>
    <pluralLabel>Metric Definitions</pluralLabel>
</CustomObject>