force-app/main/default/objects/Metric_Definition__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>