force-app/main/default/objects/Metric_Definition__mdt/fields/Metric_Key__c.field-meta.xml
<CustomField>
    <fullName>Metric_Key__c</fullName>
    <description
  >Matches an Executive_Snapshot__c field API name. Display/documentation metadata only - never dynamically invoked to build SOQL; ExecutiveCommandCenterController.getLatestSnapshot() returns the real, compiled field values and the LWC pairs them with this row's label/format by Metric_Key__c.</description>
    <label>Metric Key</label>
    <length>80</length>
    <type>Text</type>
    <required>true</required>
</CustomField>